test/integration/httproute-listener-isolation-intersection/manifests/3-route-attaches-to-wildcard-foo-example-com/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-wildcard-foo-example-com
spec:
  parentRefs:
  - name: gateway
    sectionName: wildcard-foo-example-com
  hostnames:
  - "bar.com" # doesn't match wildcard-foo-example-com listener
  - "*.example.com" # this becomes *.foo.example.com, as the hostname cannot be less specific than *.foo.example.com of the listener
  - "*.foo.example.com"
  - "abc.foo.example.com" # request matching is prevented by the isolation abc-foo-example-com listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wildcard-foo-example-com
    backendRefs:
    - name: http-echo
      port: 80
